--- a/Loon/Config/Loon-Evolve.conf
+++ b/Loon/Config/Loon-Evolve.conf
@@ -1,7 +1,7 @@
 # > Loon Config Make by Coldvvater
 # > TG Channel: https://t.me/Ison_Channel
-# > GitHub主页: https://github.com/Coldvvater
-# > Update Date: 2023.03.28
+# > GitHub: https://github.com/Coldvvater
+# > Update Date: 2023.04.08
 
 # > 自选GEOIP库可以使用: https://raw.githubusercontent.com/Loyalsoldier/geoip/release/Country.mmdb
 
@@ -198,7 +198,7 @@ https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/
 # > 国外网站分流
 https://raw.githubusercontent.com/DivineEngine/Profiles/master/Surge/Ruleset/Global.list, policy=Foreign, tag=Foreign, enabled=true
 # > Apple分流
-https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/Apple/Apple.list, policy=Apple, tag=Apple, enabled=true
+https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Apple.list, policy=Apple, tag=Apple, enabled=true
 # > 微软分流
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/Microsoft/Microsoft.list, policy=Microsoft, tag=Microsoft, enabled=true
 # > 国内网站分流
