--- a/Stash/Config/Stash-Evolve.yaml
+++ b/Stash/Config/Stash-Evolve.yaml
@@ -170,27 +170,27 @@ proxy-groups:
   - name: HongKong # > 香港节点
     icon: https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/mini/Hong_Kong.png
     <<: *u
-    filter: (?=.*(港|🇭🇰|HK|(?i)Hong))^((?!(台|日|韩|新|美)).)*$
+    filter: "港|🇭🇰|HK|(?i)Hong"
     
   - name: TaiWan # > 台湾节点
     icon: https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/mini/China.png
     <<: *u
-    filter: (?=.*(台|🇨🇳|🇹🇼|TW|(?i)Taiwan))^((?!(港|日|韩|新|美)).)*$
+    filter: "台|🇨🇳|🇹🇼|湾|TW|(?i)Taiwan"
          
   - name: Singapore # > 狮城节点
     icon: https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/mini/Singapore.png
     <<: *u
-    filter: (?=.*(坡|🇸🇬|SG|(?i)Singapore))^((?!(港|台|日|韩|美)).)*$
+    filter: "新加坡|坡|狮城|🇸🇬|SG|(?i)Singapore"
     
   - name: Japan # > 日本节点
     icon: https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/mini/Japan.png
     <<: *u
-    filter: (?=.*(日|🇯🇵|JP|(?i)Japan))^((?!(港|台|韩|新|美)).)*$
+    filter: "日|🇯🇵|东京|JP|(?i)Japan"
 
   - name: America # > 美国节点
     icon: https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/mini/United_States.png
     <<: *u
-    filter: (?=.*(美|🇺🇸|US|(?i)States|American))^((?!(港|台|日|韩|新)).)*$
+    filter: "美|🇺🇲|US|(?i)States|American"
 
   - name: Others # > 其他节点
     icon: https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/mini/Airport.png
@@ -225,7 +225,7 @@ rules:
   - GEOSITE,cn,Domestic
   # > 国内网站
 
-  # > GeoIP国家地理位置
+  # > GeoIP国家代码规则
   - GEOIP,netflix,Foreign
   # > Netflix
   - GEOIP,telegram,Telegram
