--- a/Clash/Config/ClashMeta-Evolve.yaml
+++ b/Clash/Config/ClashMeta-Evolve.yaml
@@ -42,24 +42,22 @@ tun:
 
 dns:
   enable: true
+  #prefer-h3: true
   listen: 0.0.0.0:1053
   ipv6: true
   enhanced-mode: fake-ip
-  fake-ip-range: 28.0.0.1/8
+  fake-ip-range: 198.18.0.1/16
   fake-ip-filter:
-  - '*'
-  - '+.lan'
+  - '*.lan'
+  - localhost.ptlogin2.qq.com
   default-nameserver:
-  - 223.5.5.5
+    - 223.5.5.5
   nameserver:
-  - 'tls://8.8.4.4#dns'
-  - 'tls://1.0.0.1#dns'
-  proxy-server-nameserver:
-  - https://doh.pub/dns-query
+      - https://doh.pub/dns-query
   nameserver-policy:
     "geosite:cn,private":
-    - https://doh.pub/dns-query
-    - https://dns.alidns.com/dns-query
+      - https://dns.alidns.com/dns-query
+      - https://doh.pub/dns-query
 
 p: &p
   {type: http, interval: 42300, health-check: {enable: true, url: http://cp.cloudflare.com/generate_204, interval: 300}}
