--- a/Clash/Config/ClashMeta-Evolve.yaml
+++ b/Clash/Config/ClashMeta-Evolve.yaml
@@ -73,13 +73,13 @@ proxies:
 s: &s
   type: select
   use:
-  - MySubs
+  - MyProxy
 
 proxy-providers:
-  MySubs:
+  MyProxy:
     <<: *p
     url: ""
-    path: ./MySubs.yaml
+    path: ./proxy_providers/MyProxy.yaml
 
 proxy-groups:
 
