--- a/Surge/Config/Surge-Evolve.conf
+++ b/Surge/Config/Surge-Evolve.conf
@@ -175,8 +175,8 @@ DOMAIN-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master
 # > 运营劫持
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Hijacking/Hijacking.list,AdBlock
 
-# > 港台番剧
-RULE-SET,https://raw.githubusercontent.com/NobyDa/Script/master/Surge/Bilibili.list,BiliBili
+# > 哔哩哔哩
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/BiliBili/BiliBili.list,BiliBili
 
 # > Spotify分流
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Spotify/Spotify.list,Spotify
