全面更改分流规则，杜绝大部分DNS泄露问题

--- a/Surge/Config/Surge-Evolve.conf
+++ b/Surge/Config/Surge-Evolve.conf
@@ -129,6 +129,8 @@ Fallback = fallback, policy-path=[此处填入订阅链接], url=http://cp.cloud
 Foreign = select,Proxy,Auto,Fallback,HongKong,TaiWan,Singapore,Japan,America,Others,DIRECT, no-alert=0, hidden=0
 # > 国内网站
 Domestic = select,DIRECT,Proxy,Auto,Fallback,HongKong,TaiWan,Singapore,Japan,America,Others, no-alert=0, hidden=0
+# > OpenAI
+OpenAI = select, America, no-alert=0, hidden=0, include-all-proxies=0
 # > 哔哩哔哩
 BiliBili = select,DIRECT,Proxy,Auto,Fallback,HongKong,TaiWan,Singapore,Japan,America,Others, no-alert=0, hidden=0
 # > 声田音乐
