--- a/Clash/Config/Clash-Evolve.yaml
+++ b/Clash/Config/Clash-Evolve.yaml
@@ -72,7 +72,8 @@ proxy-providers: # 代理提供商
   MySubs: &MySubs
     <<: *p
     url: ""
-    path: ./proxy_providers/mysubs.yaml # 1. 请使用Clash类型订阅链接填入引号""内使用, 2. 或可使用通用订阅链接通过Sub-Store进行订阅转换(用于Stash)。
+    path: ./proxy_providers/mysubs.yaml
+# 1. 请使用Clash类型订阅链接填入引号""内使用, 2. 或可使用通用订阅链接通过Sub-Store进行订阅转换(用于Stash)。
 
 proxy-groups: # 策略组
 
