--- a/Clash/Config/Clash-Evolve.yaml
+++ b/Clash/Config/Clash-Evolve.yaml
@@ -3,43 +3,71 @@
 # GitHub主页: https://github.com/Coldvvater
 # Update Date: 2023.04.22
 
-subscribe-url: 填上你的订阅链接         # 替换文字用于Stash获取机场流量信息并在主页显示
+subscribe-url: 填上你的订阅链接
+# 替换文字用于Stash获取机场流量信息并在主页显示
 
-mixed-port: 7890                       # 本地混合代理(http和socks5合并）端口
-allow-lan: true                        # 允许局域网连接(false/true)
-bind-address:                          # 监听IP白名单（当allow-lan：true），只允许列表设备
-  '*'                                  # 全部设备
-# 192.168.122.11                       #单个ip4地址
-# "[aaaa::a8aa:ff:fe09:57d8]"          #单个ip6地址
-mode: rule                             # clash工作模式（rule/global/direct）
-log-level: info                        # 日志等级（info/warning/error/debug/silent）
-ipv6: true                             # IP6解析开关；如果为false，将返回ip6结果为空
-external-controller: 127.0.0.1:9090    # 控制器监听地址
-dns:                                   # DNS模块设置
-  enable: true                         # DNS开关(false/true)
-  listen: 0.0.0.0:1053                 # DNS监听地址
-  ipv6: true                           # IP6解析开关；如果为false，将返回ip6结果为空
-  default-nameserver:                  # 解析非IP的dns用的dns服务器,只支持纯IP
+mixed-port: 7890
+# 本地混合代理(http和socks5合并）端口
+allow-lan: true
+# 允许局域网连接(false/true)
+bind-address:
+# 监听IP白名单（当allow-lan：true），只允许列表设备
+  '*'
+# 全部设备
+# 192.168.122.11
+# 单个ip4地址
+# "[aaaa::a8aa:ff:fe09:57d8]"
+# 单个ip6地址
+mode: rule
+# clash工作模式（rule/global/direct）
+log-level: info
+# 日志等级（info/warning/error/debug/silent）
+ipv6: true
+# IP6解析开关；如果为false，将返回ip6结果为空
+external-controller: 127.0.0.1:9090
+# 控制器监听地址
+dns:
+# DNS模块设置
+  enable: true
+# DNS开关(false/true)
+  listen: 0.0.0.0:1053
+# DNS监听地址
+  ipv6: true
+# IP6解析开关；如果为false，将返回ip6结果为空
+  default-nameserver:
+# 解析非IP的dns用的dns服务器,只支持纯IP
     - 223.5.5.5
     - 119.29.29.29
     - 114.114.114.114
-  enhanced-mode: fake-ip               # DNS模式(redir-host/fake-ip)
-  fake-ip-range: 198.18.0.1/16         # Fake-IP解析地址池
-  fake-ip-filter:                      # Fake-ip过滤，列表中的域名返回真实ip
-    - '*.lan'                          # Local Area Network
-    - '+.stun.*.*'                     # Stun Services
+  enhanced-mode: fake-ip
+# DNS模式(redir-host/fake-ip)
+  fake-ip-range: 198.18.0.1/16
+# Fake-IP解析地址池
+  fake-ip-filter:
+# Fake-ip过滤，列表中的域名返回真实ip
+    - '*.lan'
+# Local Area Network
+    - '+.stun.*.*'
+# Stun Services
     - '+.stun.*.*.*'
     - '+.stun.*.*.*.*'
     - '+.stun.*.*.*.*.*'
-    - 'lens.l.google.com'              # Google Voices
-    - '*.n.n.srv.nintendo.net'         # Nintendo Switch
-    - '+.stun.playstation.net'         # PlayStation
-    - 'xbox.*.*.microsoft.com'         # XBox
-    - '*.*.xboxlive.com'               # Microsoft
+    - 'lens.l.google.com'
+# Google Voices
+    - '*.n.n.srv.nintendo.net'
+# Nintendo Switch
+    - '+.stun.playstation.net'
+# PlayStation
+    - 'xbox.*.*.microsoft.com'
+# XBox
+    - '*.*.xboxlive.com'
+# Microsoft
     - '*.msftncsi.com'
-    - '*.msftconnecttest.com'          # Bilibili CDN
+    - '*.msftconnecttest.com'
+# Bilibili CDN
     - '*.mcdn.bilivideo.cn'
-  nameserver:                          # 默认DNS服务器，支持udp/tcp/dot/doh/doq
+  nameserver:
+# 默认DNS服务器，支持udp/tcp/dot/doh/doq
     - https://doh.pub/dns-query
     - https://dns.alidns.com/dns-query
 
@@ -51,17 +79,21 @@ tun: # TUN模式
   auto-route: true
   auto-detect-interface: true
 
-c: &c {type: http, behavior: classical, interval: 86400} # 规则行为锚点
+c: &c {type: http, behavior: classical, interval: 86400}
+# 规则行为锚点
 
 ip: &ip {type: http, behavior: ipcidr, interval: 86400}
 
-p: &p {type: http, interval: 42300, health-check: {enable: true, url: http://cp.cloudflare.com/generate_204, interval: 300} # 代理提供商锚点
+p: &p {type: http, interval: 42300, health-check: {enable: true, url: http://cp.cloudflare.com/generate_204, interval: 300}
+# 代理提供商锚点
 
-f: &f {type: select, proxies: [Proxy, Auto, Fallback, HongKong, TaiWan, Singapore, Japan, America, Others, DIRECT]} # 策略组锚点
+f: &f {type: select, proxies: [Proxy, Auto, Fallback, HongKong, TaiWan, Singapore, Japan, America, Others, DIRECT]}
+# 策略组锚点
 
 d: &d {type: select, proxies: [DIRECT, Proxy, Auto, Fallback, HongKong, TaiWan, Singapore, Japan, America, Others]}
 
-proxies: # 本地服务器
+proxies:
+# 本地服务器
 
 u: &u # 订阅引用锚点
   type: select
