--- a/Stash/Config/Stash-Evolve.yaml
+++ b/Stash/Config/Stash-Evolve.yaml
@@ -1,53 +1,83 @@
 # > Stash Config Make by Coldvvater
 # > TG Channel: https://t.me/Ison_Channel
 # > GitHub: https://github.com/Coldvvater
-# > Update Date: 2023.04.21
+# > Update Date: 2023.04.22
 
 # > 自选GEOIP库可以使用: https://testingcf.jsdelivr.net/gh/MetaCubeX/meta-rules-dat@release/country.mmdb
 
-subscribe-url: 填上你的订阅链接 # 替换文字用于Stash获取机场流量信息并在主页显示
+subscribe-url: 填上你的订阅链接
+# > 替换上面文字用于Stash获取机场流量信息并在主页显示
 
-mixed-port: 7890 # 本地混合代理(http和socks5合并）端口
-allow-lan: true # 允许局域网连接(false/true)
-bind-address: # 监听IP白名单（当allow-lan：true），只允许列表设备
-  '*' # 全部设备
-# 192.168.122.11 #单个ip4地址
-# "[aaaa::a8aa:ff:fe09:57d8]" #单个ip6地址
-mode: rule # clash工作模式（rule/global/direct）
-log-level: info # 日志等级（info/warning/error/debug/silent）
-ipv6: true # IP6解析开关；如果为false，将返回ip6结果为空
-external-controller: 127.0.0.1:9090 # 控制器监听地址
-dns: # DNS模块设置
-  enable: true # DNS开关(false/true)
-  listen: 0.0.0.0:1053 # DNS监听地址
-  ipv6: true # IP6解析开关；如果为false，将返回ip6结果为空
-  default-nameserver: # 解析非IP的dns用的dns服务器,只支持纯IP
+mixed-port: 7890
+# > 本地混合代理(http和socks5合并）端口
+allow-lan: true
+# > 允许局域网连接(false/true)
+bind-address:
+# > 监听IP白名单（当allow-lan：true），只允许列表设备
+  '*'
+# > 全部设备
+# 192.168.122.11
+# > 单个ip4地址
+# "[aaaa::a8aa:ff:fe09:57d8]"
+# > 单个ip6地址
+mode: rule
+# > clash工作模式（rule/global/direct）
+log-level: info
+# > 日志等级（info/warning/error/debug/silent）
+ipv6: true
+# > IP6解析开关；如果为false，将返回ip6结果为空
+external-controller: 127.0.0.1:9090
+# > 控制器监听地址
+dns:
+# > DNS模块设置
+  enable: true
+# > DNS开关(false/true)
+  listen: 0.0.0.0:1053
+# > DNS监听地址
+  ipv6: true
+# > IP6解析开关；如果为false，将返回ip6结果为空
+  default-nameserver:
+# > 解析非IP的dns用的dns服务器,只支持纯IP
     - 223.5.5.5
     - 119.29.29.29
     - 114.114.114.114
-  enhanced-mode: fake-ip # DNS模式(redir-host/fake-ip)
-  fake-ip-range: 198.18.0.1/16 # Fake-IP解析地址池
-  fake-ip-filter: # Fake-ip过滤，列表中的域名返回真实ip
-    - '*.lan' # Local Area Network
-    - '+.stun.*.*' # Stun Services
+  enhanced-mode: fake-ip
+# > DNS模式(redir-host/fake-ip)
+  fake-ip-range: 198.18.0.1/16
+# > Fake-IP解析地址池
+  fake-ip-filter:
+# > Fake-ip过滤，列表中的域名返回真实ip
+    - '*.lan'
+# > Local Area Network
+    - '+.stun.*.*'
+# > Stun Services
     - '+.stun.*.*.*'
     - '+.stun.*.*.*.*'
     - '+.stun.*.*.*.*.*'
-    - 'lens.l.google.com' # Google Voices
-    - '*.n.n.srv.nintendo.net' # Nintendo Switch
-    - '+.stun.playstation.net' # PlayStation
-    - 'xbox.*.*.microsoft.com' # XBox
-    - '*.*.xboxlive.com' # Microsoft
+    - 'lens.l.google.com'
+# > Google Voices
+    - '*.n.n.srv.nintendo.net'
+# > Nintendo Switch
+    - '+.stun.playstation.net'
+# > PlayStation
+    - 'xbox.*.*.microsoft.com'
+# > XBox
+    - '*.*.xboxlive.com'
+# > Microsoft
     - '*.msftncsi.com'
-    - '*.msftconnecttest.com' # Bilibili CDN
+    - '*.msftconnecttest.com'
+# > Bilibili CDN
     - '*.mcdn.bilivideo.cn'
-  nameserver: # 默认DNS服务器，支持udp/tcp/dot/doh/doq
+  nameserver:
+# > 默认DNS服务器，支持udp/tcp/dot/doh/doq
     - https://doh.pub/dns-query
     - https://dns.alidns.com/dns-query
 
-p: &p {type: http, interval: 42300, health-check: {enable: true, url: http://cp.cloudflare.com/generate_204, interval: 300} # 代理提供商锚点
+p: &p {type: http, interval: 42300, health-check: {enable: true, url: http://cp.cloudflare.com/generate_204, interval: 300}
+# > 代理提供商锚点
 
-f: &f {type: select, proxies: [Proxy, Auto, Fallback, HongKong, TaiWan, Singapore, Japan, America, Others, DIRECT]} # 策略组锚点
+f: &f {type: select, proxies: [Proxy, Auto, Fallback, HongKong, TaiWan, Singapore, Japan, America, Others, DIRECT]}
+# > 策略组锚点
 
 d: &d {type: select, proxies: [DIRECT, Proxy, Auto, Fallback, HongKong, TaiWan, Singapore, Japan, America, Others]}
 
@@ -162,22 +192,39 @@ proxy-groups: # > 策略组
       - DIRECT
 
 rules: # > 分流规则引用
-  #- GEOSITE,category-ads-all,AdBlock # > 广告规则，疑有误拦，默认关闭，按需启用
-  - GEOSITE,private,DIRECT # > Local Area Network
-  - GEOSITE,openai,America # > OpenAI ChatGPT
-  - GEOSITE,github,Proxy # > GitHub
-  - GEOSITE,bilibili,BiliBili # > 哔哩哔哩
-  - GEOSITE,spotify,Spotify # > Spotify
-  - GEOSITE,tiktok,TikTok # > 海外抖音
-  - GEOSITE,telegram,Telegram # > 电报信息
-  - GEOSITE,apple,Apple # > 苹果服务
-  - GEOSITE,microsoft,Microsoft # > 微软服务
-  - GEOSITE,geolocation-!cn,Foreign # > 国外网站
-  - GEOSITE,cn,Domestic # > 国内网站
+  #- GEOSITE,category-ads-all,AdBlock
+  # > 广告规则，疑有误拦，默认关闭，按需启用
+  - GEOSITE,private,DIRECT
+  # > Local Area Network
+  - GEOSITE,openai,America
+  # > OpenAI ChatGPT
+  - GEOSITE,github,Proxy
+  # > GitHub
+  - GEOSITE,bilibili,BiliBili
+  # > 哔哩哔哩
+  - GEOSITE,spotify,Spotify
+  # > Spotify
+  - GEOSITE,tiktok,TikTok
+  # > 海外抖音
+  - GEOSITE,telegram,Telegram
+  # > 电报信息
+  - GEOSITE,apple,Apple
+  # > 苹果服务
+  - GEOSITE,microsoft,Microsoft
+  # > 微软服务
+  - GEOSITE,geolocation-!cn,Foreign
+  # > 国外网站
+  - GEOSITE,cn,Domestic
+  # > 国内网站
 
   # > GeoIP 国家代码规则
-  - GEOIP,netflix,Foreign # > Netflix
-  - GEOIP,telegram,Telegram # > Telegram
-  - GEOIP,private,DIRECT # > Local Area Network
-  - GEOIP,CN,DIRECT # > China
-  - MATCH,Final # > 全匹配
+  - GEOIP,netflix,Foreign
+  # > Netflix
+  - GEOIP,telegram,Telegram
+  # > Telegram
+  - GEOIP,private,DIRECT
+  # > Local Area Network
+  - GEOIP,CN,DIRECT
+  # > China
+  - MATCH,Final
+  # > 全匹配
