--- a/Surge/Config/Surge-Evolve.conf
+++ b/Surge/Config/Surge-Evolve.conf
@@ -1,7 +1,7 @@
 # > Surge Config Make by Coldvvater
 # > TG Channel: https://t.me/Ison_Channel
 # > GitHub: https://github.com/Coldvvater
-# > Update Date: 2023.04.21
+# > Update Date: 2023.04.22
 
 [General]
 # > 增强版 Wi-Fi 助理
@@ -29,11 +29,8 @@ ipv6 = false
 allow-wifi-access = true
 wifi-access-http-port = 6152
 wifi-access-socks5-port = 6153
-# > Allow Hotspot Access（允许个人热点访问）
+# > 允许个人热点访问
 allow-hotspot-access = true
-# > 允许 Wi-Fi 访问 (仅 macOS，若允许远程访问将「127.0.0.1」改为「0.0.0.0」)
-http-listen = 127.0.0.1:6152
-socks5-listen = 127.0.0.1:6153
 # > Wi-Fi 不是主接口则使用SSID组的默认策略
 use-default-policy-if-wifi-not-primary = false
 
@@ -146,7 +143,6 @@ Microsoft = select,DIRECT,Proxy,Auto,Fallback,HongKong,TaiWan,Singapore,Japan,Am
 # > 广告拦截
 AdBlock = select, REJECT,DIRECT, no-alert=0, hidden=0, include-all-proxies=0
 
-# > 外部节点(在此替换您的订阅链接)
 # > 香港节点
 HongKong = select, policy-path=[此处填入订阅链接], policy-regex-filter=港|🇭🇰|香港|HK|Hong, interval=600,update-interval=86400, no-alert=0, hidden=0, include-all-proxies=0
 # > 台湾节点
