--- a/Surge/Config/Surge-Evolve.conf
+++ b/Surge/Config/Surge-Evolve.conf
@@ -1,7 +1,7 @@
 # > Surge Config Make by Coldvvater
 # > TG Channel: https://t.me/Ison_Channel
 # > GitHub: https://github.com/Coldvvater
-# > Update Date: 2023.04.22
+# > Update Date: 2023.04.25
 
 [General]
 # > 增强版 Wi-Fi 助理
@@ -66,8 +66,8 @@ exclude-simple-hostnames = true
 
 # > DNS 服务器
 dns-server = 223.5.5.5, 119.29.29.29, 114.114.114.114
-# > 加密的DNS服务器(如无必要不建议使用)
-# encrypted-dns-server = https://dns.alidns.com/dns-query,https://doh.pub/dns-query
+# > 加密的DNS服务器
+encrypted-dns-server = https://cn-south.iqiqzz.com/dns-query,https://cn-east.iqiqzz.com/dns-query
 # > Hijack DNS
 hijack-dns = 8.8.8.8:53, 8.8.4.4:53
 # > 关闭 DOH 的服务端证书验证
@@ -114,18 +114,16 @@ keyword-filter-type = false
 
 [Proxy Group]
 # > 策略组
-# > 漏网之鱼
-Final = select, Proxy, no-alert=0, hidden=0, include-all-proxies=0
 # > 节点选择
 Proxy = select, Auto,Fallback,Others,no-alert=0, hidden=0, include-all-proxies=0
 # > 自动筛选
-Auto = url-test, policy-path=[此处填入订阅链接], url=http://cp.cloudflare.com/generate_204, interval=300, update-interval=86400, tolerance=50
+Auto = url-test, policy-path=此处填入订阅链接, url=http://cp.cloudflare.com/generate_204, interval=300, update-interval=86400, tolerance=50
 # > 故障转移
-Fallback = fallback, policy-path=[此处填入订阅链接], url=http://cp.cloudflare.com/generate_204, interval=180, update-interval=86400, 
+Fallback = fallback, policy-path=此处填入订阅链接, url=http://cp.cloudflare.com/generate_204, interval=180, update-interval=86400, 
 # > 国外网站
-Foreign = select,Proxy,Auto,Fallback,HongKong,TaiWan,Singapore,Japan,America,Others,DIRECT, no-alert=0, hidden=0
+Global = select,Proxy,Auto,Fallback,HongKong,TaiWan,Singapore,Japan,America,Others,DIRECT, no-alert=0, hidden=0
 # > 国内网站
-Domestic = select,DIRECT,Proxy,Auto,Fallback,HongKong,TaiWan,Singapore,Japan,America,Others, no-alert=0, hidden=0
+Mainland = select,DIRECT,Proxy,Auto,Fallback,HongKong,TaiWan,Singapore,Japan,America,Others, no-alert=0, hidden=0
 # > 哔哩哔哩
 BiliBili = select,DIRECT,Proxy,Auto,Fallback,HongKong,TaiWan,Singapore,Japan,America,Others, no-alert=0, hidden=0
 # > 声田音乐
@@ -140,83 +138,65 @@ Telegram = select,Proxy,Auto,Fallback,HongKong,TaiWan,Singapore,Japan,America,Ot
 Apple = select,DIRECT,Proxy,Auto,Fallback,HongKong,TaiWan,Singapore,Japan,America,Others, no-alert=0, hidden=0
 # > 微软服务
 Microsoft = select,DIRECT,Proxy,Auto,Fallback,HongKong,TaiWan,Singapore,Japan,America,Others, no-alert=0, hidden=0
-# > 广告拦截
-AdBlock = select, REJECT,DIRECT, no-alert=0, hidden=0, include-all-proxies=0
 
 # > 香港节点
-HongKong = select, policy-path=[此处填入订阅链接], policy-regex-filter=港|🇭🇰|香港|HK|Hong, interval=600,update-interval=86400, no-alert=0, hidden=0, include-all-proxies=0
+HongKong = select, policy-path=此处填入订阅链接, policy-regex-filter=港|🇭🇰|香港|HK|Hong, interval=600,update-interval=86400, no-alert=0, hidden=0, include-all-proxies=0
 # > 台湾节点
-TaiWan = select, policy-path=[此处填入订阅链接], policy-regex-filter=台|🇹🇼|台湾|TW|Tai, interval=600,update-interval=86400, no-alert=0, hidden=0, include-all-proxies=0
+TaiWan = select, policy-path=此处填入订阅链接, policy-regex-filter=台|🇹🇼|台湾|TW|Tai, interval=600,update-interval=86400, no-alert=0, hidden=0, include-all-proxies=0
 # > 狮城节点
-Singapore = select, policy-path=[此处填入订阅链接], policy-regex-filter=坡|🇸🇬|新加坡|狮城|SG|Singapore, interval=600,update-interval=86400, no-alert=0, hidden=0, include-all-proxies=0
+Singapore = select, policy-path=此处填入订阅链接, policy-regex-filter=坡|🇸🇬|新加坡|狮城|SG|Singapore, interval=600,update-interval=86400, no-alert=0, hidden=0, include-all-proxies=0
 # > 日本节点
-Japan = select, policy-path=[此处填入订阅链接], policy-regex-filter=日|🇯🇵|日本|JP|Japan, interval=600,update-interval=86400, no-alert=0, hidden=0, include-all-proxies=0
+Japan = select, policy-path=此处填入订阅链接, policy-regex-filter=日|🇯🇵|日本|JP|Japan, interval=600,update-interval=86400, no-alert=0, hidden=0, include-all-proxies=0
 # > 美国节点
-America = select, policy-path=[此处填入订阅链接], policy-regex-filter=美|🇺🇲|美国|US|States|American, interval=600,update-interval=86400, no-alert=0, hidden=0, include-all-proxies=0
+America = select, policy-path=此处填入订阅链接, policy-regex-filter=美|🇺🇲|美国|US|States|American, interval=600,update-interval=86400, no-alert=0, hidden=0, include-all-proxies=0
 # > 其他节点
-Others = select, DIRECT, policy-path=[此处填入订阅链接], policy-regex-filter=.*,interval=600, update-interval=86400, no-alert=0, hidden=0, include-all-proxies=0
+Others = select, DIRECT, policy-path=此处填入订阅链接, policy-regex-filter=.*,interval=600, update-interval=86400, no-alert=0, hidden=0, include-all-proxies=0
 
 [Rule]
-# > TestFlght域名
-DOMAIN,testflight.apple.com,Proxy
-
-# > Local Area Network 局域网指定分流
-RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list,DIRECT
-
-# > 规则修正
-RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/UnBan.list,DIRECT
-
-# > 广告拦截
-RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanAD.list,AdBlock
-RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanProgramAD.list,AdBlock
-
 # > OpenAI
-RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/OpenAi.list,America
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/OpenAI/OpenAI.list,America
 
 # > 哔哩哔哩
-RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Bilibili.list,BiliBili
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/BiliBili/BiliBili.list,BiliBili
 
-# > Spotify分流
-RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Spotify.list,Spotify
+# > Spotify
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Spotify/Spotify.list,Spotify
 
-# > TikTok分流
-RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/TikTok.list,TikTok
+# > TikTok
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/TikTok/TikTok.list,TikTok
 
-# > 国际流媒体
-RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyMedia.list,Streaming
+# > Telegram
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Telegram/Telegram.list,Telegram
 
-# > 电报分流
-RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Telegram.list,Telegram
+# > Testfilght
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/TestFlight/TestFlight.list,Global
 
-# > Apple分流
-RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Apple.list,Apple
+# > 苹果服务
+DOMAIN-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Apple/Apple_Domain.list,Apple
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Apple/Apple.list,Apple
 
-# > 微软分流
-RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Microsoft.list,Microsoft
+# > 微软服务
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Microsoft/Microsoft.list,Microsoft
 
 # > 国内网站
-RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list,DIRECT
+DOMAIN-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/ChinaMax/ChinaMax_Domain.list,Mainland
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/ChinaMax/ChinaMax.list,Mainland
 
-# > 国内媒体
-RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaMedia.list,DIRECT
+# > 国外网站
+DOMAIN-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Global/Global_Domain.list,Global
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Global/Global.list,Global
 
-# > 国内服务商IP
-RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaCompanyIp.list,DIRECT
-
-# > 国内网站IP
-RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaIp.list,DIRECT
-
-# > 国外网站分流
-RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyGFWlist.list,Foreign
+# > Local Area Network 局域网指定分流
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Lan/Lan.list,DIRECT
 
 # > 防止应用循环请求
 IP-CIDR,0.0.0.0/32,REJECT,no-resolve
 
 # > GeoIP China
-GEOIP,CN,DIRECT,no-resolve
+GEOIP,CN,DIRECT
 
 # > DNS 查询失败走 Final 规则
-FINAL,Final,dns-failed
+FINAL,Proxy,dns-failed
 
 [Host]
 # > 域名指定 DNS 映射
