--- a/Surge/Config/Surge-Evolve.conf
+++ b/Surge/Config/Surge-Evolve.conf
@@ -1,7 +1,7 @@
 # > Surge Config Make by Coldvvater
 # > TG Channel: https://t.me/Ison_Channel
 # > GitHub: https://github.com/Coldvvater
-# > Update Date: 2023.04.25
+# > Update Date: 2023.04.26
 
 [General]
 # > 增强版 Wi-Fi 助理
@@ -114,6 +114,8 @@ keyword-filter-type = false
 
 [Proxy Group]
 # > 策略组
+# > 漏网之鱼
+Final = select, Proxy, DIRECT, no-alert=0, hidden=0, include-all-proxies=0
 # > 节点选择
 Proxy = select, Auto,Fallback,Others,no-alert=0, hidden=0, include-all-proxies=0
 # > 自动筛选
@@ -153,6 +155,9 @@ America = select, policy-path=此处填入订阅链接, policy-regex-filter=美|
 Others = select, DIRECT, policy-path=此处填入订阅链接, policy-regex-filter=.*,interval=600, update-interval=86400, no-alert=0, hidden=0, include-all-proxies=0
 
 [Rule]
+# > Local Area Network 局域网指定分流
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Lan/Lan.list,DIRECT
+
 # > OpenAI
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/OpenAI/OpenAI.list,America
 
@@ -190,9 +195,6 @@ RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/r
 DOMAIN-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Global/Global_Domain.list,Global
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Global/Global.list,Global
 
-# > Local Area Network 局域网指定分流
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Lan/Lan.list,DIRECT
-
 # > 防止应用循环请求
 IP-CIDR,0.0.0.0/32,REJECT,no-resolve
 
@@ -200,7 +202,7 @@ IP-CIDR,0.0.0.0/32,REJECT,no-resolve
 GEOIP,CN,DIRECT
 
 # > DNS 查询失败走 Final 规则
-FINAL,Proxy,dns-failed
+FINAL,Final,dns-failed
 
 [Host]
 # > 域名指定 DNS 映射
