--- a/Clash/Config/Clash-Evolve.yaml
+++ b/Clash/Config/Clash-Evolve.yaml
@@ -1,302 +1,1 @@
-# Clash Config Make by Coldvvater
-# TG Channel: https://t.me/Ison_Channel
-# GitHub主页: https://github.com/Coldvvater
-# Update Date: 2023.04.26
-
-subscribe-url: 填上你的订阅链接
-# 替换上面文字用于Stash获取机场流量信息并在主页显示
-
-mixed-port: 7890
-# 本地混合代理(http和socks5合并）端口
-allow-lan: true
-# 允许局域网连接(false/true)
-bind-address:
-# 监听IP白名单（当allow-lan：true），只允许列表设备
-  '*'
-# 全部设备
-# 192.168.122.11
-# 单个ip4地址
-# "[aaaa::a8aa:ff:fe09:57d8]"
-# 单个ip6地址
-mode: rule
-# clash工作模式（rule/global/direct）
-log-level: info
-# 日志等级（info/warning/error/debug/silent）
-ipv6: true
-# IP6解析开关；如果为false，将返回ip6结果为空
-external-controller: 127.0.0.1:9090
-# 控制器监听地址
-dns:
-# DNS模块设置
-  enable: true
-# DNS开关(false/true)
-  listen: 0.0.0.0:1053
-# DNS监听地址
-  ipv6: true
-# IP6解析开关；如果为false，将返回ip6结果为空
-  default-nameserver:
-# 解析非IP的dns用的dns服务器,只支持纯IP
-    - 223.5.5.5
-    - 119.29.29.29
-    - 114.114.114.114
-  enhanced-mode: fake-ip
-# DNS模式(redir-host/fake-ip)
-  fake-ip-range: 198.18.0.1/16
-# Fake-IP解析地址池
-  fake-ip-filter:
-# Fake-ip过滤，列表中的域名返回真实ip
-    - '*.lan'
-# Local Area Network
-    - '+.stun.*.*'
-# Stun Services
-    - '+.stun.*.*.*'
-    - '+.stun.*.*.*.*'
-    - '+.stun.*.*.*.*.*'
-    - 'lens.l.google.com'
-# Google Voices
-    - '*.n.n.srv.nintendo.net'
-# Nintendo Switch
-    - '+.stun.playstation.net'
-# PlayStation
-    - 'xbox.*.*.microsoft.com'
-# XBox
-    - '*.*.xboxlive.com'
-# Microsoft
-    - '*.msftncsi.com'
-    - '*.msftconnecttest.com'
-# Bilibili CDN
-    - '*.mcdn.bilivideo.cn'
-  nameserver:
-# 默认DNS服务器，支持udp/tcp/dot/doh/doq
-    - https://doh.pub/dns-query
-    - https://dns.alidns.com/dns-query
-
-tun: # TUN模式
-  enable: true
-  stack: system
-  dns-hijack:
-    - 'any:53'
-  auto-route: true
-  auto-detect-interface: true
-
-c: &c {type: http, behavior: classical, interval: 86400}
-# 规则行为锚点
-
-dm: &dm {type: http, behavior: domain, interval: 86400}
-
-ip: &ip {type: http, behavior: ipcidr, interval: 86400}
-
-p: &p {type: http, interval: 42300, health-check: {enable: true, url: http://cp.cloudflare.com/generate_204, interval: 300}}
-# 代理提供商锚点
-
-f: &f {type: select, proxies: [Proxy, Auto, Fallback, HongKong, TaiWan, Singapore, Japan, America, Others, DIRECT]}
-# 策略组锚点
-
-d: &d {type: select, proxies: [DIRECT, Proxy, Auto, Fallback, HongKong, TaiWan, Singapore, Japan, America, Others]}
-
-proxies:
-# 本地服务器
-
-u: &u # 订阅引用锚点
-  type: select
-  use:
-  - MySubs
-
-proxy-providers: # 代理提供商(远程订阅)
-  MySubs: &MySubs
-    <<: *p
-    url: ""
-    path: ./proxy_providers/mysubs.yaml
-# 1. 请使用Clash类型订阅链接填入引号""内使用,
-# 2. 或可使用通用订阅链接通过Sub-Store进行订阅转换(用于Stash)。
-
-proxy-groups: # 策略组
-
-  - name: Final # > 漏网之鱼
-    icon: https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/mini/Final.png
-    <<: *f
-    proxies:
-      - Proxy
-      - DIRECT
-
-  - name: Proxy # 节点选择
-    icon: https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/mini/Rocket.png
-    <<: *f
-    proxies:
-      - Auto
-      - Fallback
-      - Others
-
-  - name: Auto # 自动筛选
-    type: url-test
-    icon: https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/mini/Auto.png
-    lazy: true # 在策略组没有被使用时候，不进行延迟测试
-    <<: *u
-
-  - name: Fallback # 故障转移
-    type: fallback
-    icon: https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/mini/Available.png
-    <<: *u
-
-  - name: Global # 全球加速
-    icon: https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/mini/Global.png
-    <<: *f
-
-  - name: Mainland # 直连网站
-    icon: https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/mini/China_Map.png
-    <<: *d
-
-  - name: BiliBili # 哔哩哔哩
-    icon: https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/mini/bilibili.png
-    <<: *d
-
-  - name: Spotify # 声田音乐
-    icon: https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/mini/Spotify.png
-    <<: *f
-
-  - name: TikTok # 海外抖音
-    icon: https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/mini/TikTok.png
-    <<: *f
-
-  - name: Streaming # 国际媒体
-    icon: https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/mini/Streaming.png
-    <<: *f
-
-  - name: Telegram # 电报信息
-    icon: https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/mini/Telegram_X.png
-    <<: *f
-
-  - name: Apple # 苹果服务
-    icon: https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/mini/Apple.png
-    <<: *d
-
-  - name: Microsoft # 微软服务
-    icon: https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/mini/Microsoft.png
-    <<: *d
-
-  - name: HongKong # 香港节点
-    icon: https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/mini/Hong_Kong.png
-    <<: *u
-    filter: 港|🇭🇰|HK|(?i)Hong
-
-  - name: TaiWan # 台湾节点
-    icon: https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/mini/China.png
-    <<: *u
-    filter: 台|🇨🇳|🇹🇼|湾|TW|(?i)Taiwan
-  
-  - name: Singapore # 狮城节点
-    icon: https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/mini/Singapore.png
-    <<: *u
-    filter: 新加坡|坡|狮城|🇸🇬|SG|(?i)Singapore
-
-  - name: Japan # 日本节点
-    icon: https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/mini/Japan.png
-    <<: *u
-    filter: 日|🇯🇵|东京|JP|(?i)Japan
-
-  - name: America # 美国节点
-    icon: https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/mini/United_States.png
-    <<: *u
-    filter: 美|🇺🇲|US|(?i)States|American
-
-  - name: Others # 其他节点
-    icon: https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/mini/Airport.png
-    <<: *u
-    proxies:
-      - DIRECT
-
-rule-providers: # 远程规则集
-
-  OpenAI: # > ChatGPT
-    <<: *c
-    url: "https://ghproxy.com/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/OpenAI/OpenAI.yaml"
-    path: ./ruleset/OpenAI.yaml
-
-  BiliIntl: # 哔哩哔哩东南亚
-    <<: *c
-    url: "https://ghproxy.com/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/BiliBiliIntl/BiliBiliIntl.yaml"
-    path: ./ruleset/BiliIntl.yaml
-
-  BiliBili: # 哔哩哔哩
-    <<: *c
-    url: "https://ghproxy.com/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/BiliBili/BiliBili.yaml"
-    path: ./ruleset/BiliBili.yaml
-
-  Spotify: # 声田音乐
-    <<: *c
-    url: "https://ghproxy.com/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Spotify/Spotify.yaml"
-    path: ./ruleset/Spotify.yaml
-
-  TikTok: # 海外抖音
-    <<: *c
-    url: "https://ghproxy.com/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/TikTok/TikTok.yaml"
-    path: ./ruleset/TikTok.yaml
-
-  GlobalMedia: # 国际媒体
-    <<: *dm
-    url: "https://ghproxy.com/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/GlobalMedia/GlobalMedia_Domain.yaml"
-    path: ./ruleset/GlobalMedia.yaml
-
-  Telegram: # 电报信息
-    <<: *c
-    url: "https://ghproxy.com/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Telegram/Telegram.yaml"
-    path: ./ruleset/Telegram.yaml
-
-  TestFlight: # 苹果服务
-    <<: *c
-    url: "https://ghproxy.com/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/TestFlight/TestFlight.yaml"
-    path: ./ruleset/TestFlight.yaml
-
-  Apple: # 苹果服务
-    <<: *dm
-    url: "https://ghproxy.com/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Apple/Apple_Domain.yaml"
-    path: ./ruleset/Apple.yaml
-
-  Microsoft: # 微软服务
-    <<: *c
-    url: "https://ghproxy.com/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Microsoft/Microsoft.yaml"
-    path: ./ruleset/Microsoft.yaml
-
-  ChinaMax: # 国内网站
-    <<: *c
-    url: "https://ghproxy.com/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/ChinaMax/ChinaMax.yaml"
-    path: ./ruleset/ChinaMax.yaml
-
-  ChinaMax_Domain: # 国内网站域名
-    <<: *dm
-    url: "https://ghproxy.com/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/ChinaMax/ChinaMax_Domain.yaml"
-    path: ./ruleset/ChinaMax_Domain.yaml
-
-  ChinaMax_IP: # 国内网站IP
-    <<: *ip
-    url: "https://ghproxy.com/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/ChinaMax/ChinaMax_IP.yaml"
-    path: ./ruleset/ChinaMax_IP.yaml
-
-  Global_Domain: # 国外网站
-    <<: *dm
-    url: "https://ghproxy.com/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Global/Global_Domain.yaml"
-    path: ./ruleset/Global_Domain.yaml
-
-  LAN: # 局域网
-    <<: *c
-    url: "https://ghproxy.com/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Lan/Lan.yaml"
-    path: ./ruleset/Lan.yaml
-
-rules: # 分流规则引用
-  - RULE-SET,OpenAI,America
-  - RULE-SET,BiliIntl,Global
-  - RULE-SET,BiliBili,BiliBili
-  - RULE-SET,Spotify,Spotify
-  - RULE-SET,TikTok,TikTok
-  - RULE-SET,GlobalMedia,Streaming
-  - RULE-SET,Telegram,Telegram
-  - RULE-SET,TestFlight,Global
-  - RULE-SET,Apple,Apple
-  - RULE-SET,Microsoft,Microsoft
-  - RULE-SET,Global_Domain,Global
-  - RULE-SET,ChinaMax,Mainland
-  - RULE-SET,ChinaMax_Domain,Mainland
-  - RULE-SET,ChinaMax_IP,Mainland
-  - RULE-SET,LAN,DIRECT
-  - GEOIP,CN,DIRECT
-  - MATCH,Final
+待调整...
